# Autonomous-Network-Self-Healing

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
apps/: controller_tuner.cpp  help_proxy_sim.cpp
apps/flooding/: main.cpp
apps/ns3_flooding/: swarm_flooding.cc
common/: messages.h  packet.h
githooks/: pre-commit
interfaces/: communication_manager.h  dispatch_manager.h  flood_manager.h  flooding_manager.h  neighbor_info.h  neighbor_manager.h  position.h  radio.h  velocity_actuator.h  velocity_actuator_interface.h  velocity_command.h
modules/communication/: communication_manager.cpp  communication_manager.h
modules/controller/: control_message.h  controller.cpp  controller.h  force.h
modules/dispatch/: dispatch_manager.h
modules/flood/: flood_manager.cpp  flood_manager.h
modules/flooding/: flood.cpp  flood.h  messages.h
modules/neighbor/: neighbor_info.cpp  neighbor_info.h  neighbor_manager.cpp  neighbor_manager.h
modules/position/: position.cpp  position.h
modules/velocity/: velocity_actuator.cpp  velocity_actuator.h  velocity_command.h
output/: drone-simulation.xml
platform/ns3/: ns3_communication_manager.h
platform/ns3/base_station/: ns3_base_station.cpp  ns3_base_station.h
platform/ns3/communication_manager/: ns3_communication_manager.h
platform/ns3/custom_mobility/: custom_mobility.cpp  custom_mobility.h
platform/ns3/drone/: ns3_drone.cpp  ns3_drone.h
platform/ns3/neighbor/: neighbor_info.cpp  neighbor_info.h  ns3_neighbor_manager.cpp  ns3_neighbor_manager.h
platform/ns3/position/: ns3_position.cpp  ns3_position.h
platform/ns3/radio_environment/: radio_environment.cpp  radio_environment.h  radio_environment_config.h
platform/ns3/transport/: ns3_socket_transport.cpp  ns3_socket_transport.h
platform/ns3/velocity_actuator/: ns3_velocity_actuator.cpp  ns3_velocity_actuator.h
report/: TechnicalReport.tex  references.bib
simulator/: CMakeLists.txt  Dockerfile
simulator/apps/: help_proxy_sim.cpp  help_proxy_sim2.cpp  main.cpp  test_simulation.cpp
simulator/common/: vector3D.h
simulator/interfaces/: communication_manager.h  flooding_manager.h  neighbor_info.h  neighbor_manager.h  position.h  velocity_actuator.h
simulator/modules/communication/: communication_manager.cpp  communication_manager.h  transport.h
simulator/modules/controller/: controller.cpp  controller.h
simulator/modules/core/: base_station.cpp  base_station.h  drone.cpp  drone.h  messages.h
simulator/modules/dispatch/: dispatch_manager.cpp  dispatch_manager.h
simulator/modules/flood/: flood.cpp  flood.h  flood_manager.cpp  flood_manager.h  flood_messages.h  messages.h
simulator/modules/messages/: messages.h
simulator/modules/neighbor/: neighbor_info.cpp  neighbor_info.h  neighbor_manager.cpp  neighbor_manager.h
simulator/platform/ns3/: communication_manager.cpp  communication_manager.h  radio_endpoint.h  radio_environment.cpp  radio_environment.h
simulator/platform/ns3/base_station/: ns3_base_station.cpp  ns3_base_station.h
simulator/platform/ns3/custom_mobility/: custom_mobility.cpp
simulator/platform/ns3/drone/: ns3_drone.cpp  ns3_drone.h
simulator/platform/ns3/position/: ns3_position.cpp
simulator/platform/ns3/transport/: ns3_socket_transport.cpp  ns3_socket_transport.h
simulator/platform/ns3/velocity_actuator/: ns3_velocity_actuator.cpp  ns3_velocity_actuator.h
simulator/src/: main.cpp
simulator/src/comm/: RadioEnvironment.cpp  RadioEnvironment.h
simulator/src/core/: BaseStation.cpp  BaseStation.h  Drone.cpp  Drone.h
tests/: fake_communication_manager.cpp  fake_communication_manager.h  fake_radio.cpp  fake_radio.h
